--- a/css/master.css
+++ b/css/master.css
@@ -1130,4 +1130,102 @@ a {
     display: flex;
     flex-direction: column;
   }
+}
+
+/*
+    page 3 Profile
+*/
+.profile-page {
+  margin-top: 40px !important;
+}
+@media (max-width: 767px) {
+  .profile-page .overview {
+    flex-direction: column;
+  }
+}
+.profile-page .overview .avatar_box {
+  padding: 20px;
+  text-align: center;
+  width: 300px;
+}
+.profile-page .overview .avatar_box img {
+  width: 120px;
+  height: 120px;
+}
+@media (min-width: 768px) {
+  .profile-page .overview .avatar_box {
+    border-right: 1px solid #EEE;
+  }
+}
+.profile-page .overview .level {
+  height: 6px !important;
+  overflow: hidden;
+  width: 70%;
+  margin-top: 10px !important;
+  margin: auto;
+}
+.profile-page .overview .level span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #0075ff;
+  height: 100%;
+  border-radius: 6px;
+}
+
+.overview .info_box .box {
+  display: flex;
+  flex-wrap: wrap !important;
+  border-bottom: 1px solid #EEE;
+  transition: 0.3s all;
+  width: 100% !important;
+}
+.overview .info_box .box label {
+  display: flex;
+  align-items: center;
+}
+.overview .info_box .box:hover {
+  background-color: #f9f9f9;
+}
+.overview .info_box .box .content__box {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  padding-top: 20px;
+  justify-content: space-between;
+}
+
+/* Start Training Code */
+.profile-page .info_box .toggle-switch {
+  height: 20px;
+}
+.profile-page .info_box .toggle-switch .fa-xmark {
+  top: 3px;
+  left: 7px;
+}
+
+.profile-page .info_box .toggle-switch > i {
+  width: 14px;
+  height: 14px;
+}
+
+.profile-page .toggle-checkbox:checked + .toggle-switch .fa-xmark {
+  top: 3px;
+  left: 57px !important;
+  transition: all 0.3s;
+  color: transparent !important;
+  background-color: transparent !important;
+}
+.profile-page .toggle-checkbox:checked + .toggle-switch .fa-check {
+  left: 57px !important;
+  top: 2.5px !important;
+  transition: all 0.3s;
+  color: #0075ff !important;
+  display: flex !important;
+}
+
+@media (max-width: 767px) {
+  .profile-page .info_box .toggle-switch {
+    margin: auto;
+  }
 }/*# sourceMappingURL=master.css.map */
